[tool.poetry]
name = "DiscordChatAssistant"
version = "0.0.1"
description = "A discord bot to connect to google's chat assistant"
authors = ["JDJG"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"

"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", extras = ["voice", "speed"], branch="master"}
discord-ext-voice-recv = {git = "https://github.com/imayhaveborkedit/discord-ext-voice-recv.git"}
jishaku = {git = "https://github.com/Gorialis/jishaku.git"}
asqlite = {git = "https://github.com/Rapptz/asqlite/"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
